--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -15,6 +15,10 @@ ul
     justify-content: space-evenly;
     list-style-type: none;
 }
+li
+{
+    padding: 10px;
+}
 a
 {
     text-decoration: none;
