--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -47,3 +47,12 @@ a
     display: table;
     clear: both;
 }
+article
+{
+    text-align: center;
+}
+#happymeal
+{
+    width: 70vw;
+    height: auto;
+}
