--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -81,9 +81,20 @@ article
 {
     display: none;
 }
-
+.smol
+{
+    display: none;
+}
 @media screen and (max-width: 1000px)
 {
+    header
+    {
+        display: none;
+    }
+    .smol
+    {
+        display: inline;
+    }
     nav
     {
         display: none;
@@ -126,7 +137,7 @@ article
     {
         display: block;
     }
-    .grid-container-three .grid-container-two
+    .grid-container-three, .grid-container-two
     {
         grid-template-columns: min-content;
     }
