--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,11 +3,16 @@
  * aanmaakdatum:   21-3-2023
  * omschrijving:   ProjectT3
  */
-
+@font-face
+{
+    font-family: "cool";
+    src: url(../fonts/Roboto-Black.ttf);
+}
 body
 {
     padding: 0;
     margin: 0;
+    font-family: cool;
 }
 ul
 {
