--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -8,11 +8,20 @@
     font-family: "cool";
     src: url(../fonts/Roboto-Black.ttf);
 }
+@font-face
+{
+    font-family: "nice";
+    src: url(../fonts/Roboto-Bold.ttf);
+}
 body
 {
     padding: 0;
     margin: 0;
-    font-family: cool;
+    font-family: "nice",sans-serif;
+}
+h3
+{
+    font-family: "cool",sans-serif;
 }
 ul
 {
